--- a/index.html
+++ b/index.html
@@ -19,5 +19,11 @@
 <li>Ruby On Rails</li>
 <li>Django</li>
 </ul>
+<h3>Créer compte</h3>
+<form action="">
+<input type="text" placeholder="Nom" /><br />
+<input type="text" placeholder="Nom" />
+<input type="submit" value="Envoyer" />
+</form>
 </body>
 </html>
